[package]
name = "dronelab"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
#iced = { git = "https://github.com/iced-rs/iced", branch = "master" }
iced = { version = "0.13.1", features = ["advanced", "image", "tokio"] }
openh264 = "0.9.0"
option-lock = "0.3.1"
#sdl2 = "0.38.0"
#tello = "0.6.3"
tello-edu = "0.5.5"
tokio = { version = "1.48.0", features = ["sync"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
#tokio = { version = "1.47.1", features = ["full"] }

[patch.crates-io]
tello-edu = { path = "../tello-edu-rs" }
